# rust-book-backend

./: .gitignore  Caddyfile  docker-compose.yml  nginx.conf
dashboard/: package.json  pnpm-lock.yaml  styles.scss
dashboard/lib/: index.tsx
notebooks/: .gitignore  answers.ipynb  bugs.ipynb  build_summaries.py  irt.py  requirements.txt  rs_utils.rs  utils.py
notebooks/rs_utils/: log.txt
notebooks/rs_utils/crates/python_bindings/: Cargo.toml  pyproject.toml
notebooks/rs_utils/crates/python_bindings/src/: lib.rs
notebooks/rs_utils/crates/utils/: Cargo.toml  build.rs
notebooks/rs_utils/crates/utils/src/: answers.rs  lib.rs  quizzes.rs  token.rs
scripts/: backup.sh  build-summaries.sh  sync-logs.sh
server/: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml
server/src/: main.rs
